<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b>&lt;br />on your smartphone or computer&lt;br />and enter this code</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="dgts__call_me">Call me</string>
    <string name="dgts__calling">Calling…</string>
    <string name="dgts__confirmation_code">Confirmation code</string>
    <string name="dgts__confirmation_edit_hint">Enter the 6-digit code we sent you</string>
    <string name="dgts__confirmation_error">Unable to confirm your phone number</string>
    <string name="dgts__confirmation_error_alternative">Sorry, we are having trouble sending you a confirmation code.</string>
    <string name="dgts__confirmation_expired">This code has expired. Please resend confirmation code.</string>
    <string name="dgts__continue">Continue</string>
    <string name="dgts__create_account">Create account</string>
    <string name="dgts__digits_logo_desc">digits logo icon</string>
    <string name="dgts__digits_logo_name_desc">digits logo name</string>
    <string name="cancel_text">Cancel</string>
    <string name="i_konw_text">Roger</string>
    <string name="invited_game_dialog">Server Requests</string>
    <string name="invited_game_dialog_capacity">Server capacity</string>
    <string name="invited_game_dialog_capacity2">%s</string>
    <string name="invited_game_dialog_content1">Your friend &lt;b>\"&lt;font color=#000000>%s&lt;/font>\"&lt;/b> invited you to his server:</string>
    <string name="invited_game_dialog_content2">Click confirm to join the server</string>
    <string name="invited_game_dialog_mode1">Game version</string>
    <string name="invited_game_dialog_mode2">Survival mode</string>
    <string name="invited_game_dialog_speed1">Speed</string>
    <string name="invited_game_dialog_speed2">Excellent</string>
    <string name="invited_game_dialog_type1">Server type</string>
    <string name="invited_game_dialog_type2">Survival mode</string>
    <string name="mm_be_kicked_tip_layer">You are kicked out by host</string>
    <string name="mm_be_kicked_tip_layer_ok">OK</string>
    <string name="mm_feedback_email">My Email</string>
    <string name="mm_pay_help1">1.What are coins?</string>
    <string name="mm_pay_help2">The coin is the currency in circulation in multiplayer master. It can be used to purchase goods and services in Multiplayer Master.</string>
    <string name="mm_pay_help3">2.How much is 1 coin worth?</string>
    <string name="mm_pay_help4">The exchange rate between coins and US dollars is $US1 = 100 coins. That is, a coin is worth an American penny.</string>
    <string name="mm_pay_help5">3.How do I top up coins?</string>
    <string name="mm_pay_help6">Currently, Multiplayer Master only supports topping up via Google Play.</string>
    <string name="mm_pay_help7">4.What should I do if I encounter problems topping up?</string>
    <string name="mm_pay_help8">Click &lt;u>&lt;font color=#20a571>here&lt;/font>&lt;/u> to provide us with direct feedback.</string>
    <string name="mm_pay_list_help">Help</string>
    <string name="mm_pay_problem_content">Hi, you seem to have given up your purchase.May we know why?</string>
    <string name="mm_pay_problem_content_1">"Don't have a credit card"</string>
    <string name="mm_pay_problem_content_2">Problem filling in Google information</string>
    <string name="mm_pay_problem_content_3">Problem with redemption code</string>
    <string name="mm_pay_problem_content_4">Error during payment</string>
    <string name="mm_pay_problem_content_5">"Don't want to buy now"</string>
    <string name="mm_pay_problem_content_6">Chose the wrong item</string>
    <string name="mm_pay_problem_submit">Submit</string>
    <string name="mm_pay_problem_title">Help</string>
    <string name="mm_pop_guide_lastedjoin">Recently join</string>
    <string name="mm_pop_guide_lastedopen">Recently open</string>
    <string name="mm_pop_guide_quickjoin">Quick join</string>
    <string name="mm_pop_guide_searchroom">Search server</string>
    <string name="mm_sliding_exit_cancel_button">Cancel</string>
    <string name="mm_sliding_exit_yes_button">Yes</string>
    <string name="tip_text">Tip</string>
    <string name="mm_help_vip">5.How can I get the Upgrade Offers of VIP?</string>
    <string name="mm_help_vip_rule">"Rules:
 •If you have more than 30 days of VIP1 access left, you may choose to pay US$4/month to upgrade.
 • If you has M months and N days of access left, you may pay the difference by paying $US4/month to upgrade to a VIP2 account (the number of months where payment can be made shall be less than M). After you pay the difference, the VIP2 account immediately becomes active. After the VIP2 account expires, you will continue to have access to any remaining VIP1 services. For example, if you has 3 months and 20 days of access to VIP1 services and pays $US 8 to make up the difference to buy VIP2 services, you will have 2 months of access to VIP2 services. After the VIP2 account expires, you will still have 1 month and 20 days of access to VIP1 services.
 • If you has less than 30 VIP1 days, you cannot take advantage of the offer to make up the difference and pay US$4/month to upgrade. You must start a VIP2 account at a price of US$5.99/month.
 • Upgrading and offers for paying the difference are only available to VIP1 members."</string>
</resources>