<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/mm_default_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/mm_tiny_help_title_ll" android:background="@drawable/mm_header_bg" android:layout_width="fill_parent" android:layout_height="56.0dip">
        <Button android:id="@id/mm_tiny_help_title_backBt" android:background="@drawable/back_btn_select" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginLeft="5.0dip" android:layout_centerVertical="true" />
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/mm_tiny_help_title_tv" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/mm_pay_list_help" android:layout_toRightOf="@id/mm_tiny_help_title_backBt" />
    </RelativeLayout>
    <ScrollView android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/mm_tiny_help_title_ll">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18.0sp" android:textColor="@color/mm_private_server_intro_more" android:id="@id/mm_tiny_help_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip" android:text="@string/mm_pay_help1" />
            <TextView android:textSize="15.0sp" android:textColor="@color/mm_private_server_text" android:id="@id/mm_tiny_help_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip" android:text="@string/mm_pay_help2" android:layout_below="@id/mm_tiny_help_1" />
            <TextView android:textSize="18.0sp" android:textColor="@color/mm_private_server_intro_more" android:id="@id/mm_tiny_help_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/mm_pay_help3" android:layout_below="@id/mm_tiny_help_2" />
            <TextView android:textSize="15.0sp" android:textColor="@color/mm_private_server_text" android:id="@id/mm_tiny_help_4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip" android:text="@string/mm_pay_help4" android:layout_below="@id/mm_tiny_help_3" />
            <TextView android:textSize="18.0sp" android:textColor="@color/mm_private_server_intro_more" android:id="@id/mm_tiny_help_5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/mm_pay_help5" android:layout_below="@id/mm_tiny_help_4" />
            <TextView android:textSize="15.0sp" android:textColor="@color/mm_private_server_text" android:id="@id/mm_tiny_help_6" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip" android:text="@string/mm_pay_help6" android:layout_below="@id/mm_tiny_help_5" />
            <TextView android:textSize="18.0sp" android:textColor="@color/mm_private_server_intro_more" android:id="@id/mm_tiny_help_7" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/mm_pay_help7" android:layout_below="@id/mm_tiny_help_6" />
            <TextView android:textSize="15.0sp" android:textColor="@color/mm_private_server_text" android:id="@id/mm_tiny_help_8" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip" android:text="@string/mm_pay_help8" android:layout_below="@id/mm_tiny_help_7" />
            <TextView android:textSize="18.0sp" android:textColor="@color/mm_private_server_intro_more" android:id="@id/mm_tiny_help_9" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/mm_help_vip" android:layout_below="@id/mm_tiny_help_8" />
            <TextView android:textSize="15.0sp" android:textColor="@color/mm_private_server_text" android:id="@id/mm_tiny_help_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip" android:text="@string/mm_help_vip_rule" android:layout_below="@id/mm_tiny_help_9" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>