<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:orientation="vertical" android:background="@color/mm_sliding_exit_bg" android:layout_width="320.0dip" android:layout_height="500.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/mm_pay_problem_titlerl" android:background="@color/mm_sliding_exit_title_bg" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/pay_problem_title_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/mm_pay_problem_title" android:singleLine="true" android:layout_centerInParent="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/mm_pay_problem_content" android:layout_width="fill_parent" android:layout_height="330.0dip" android:layout_marginTop="10.0dip" android:layout_below="@id/mm_pay_problem_titlerl">
        <TextView android:textSize="15.0sp" android:textColor="@color/black" android:gravity="left" android:id="@id/pay_problem_msg_textview" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/mm_pay_problem_content" />
        <LinearLayout android:paddingLeft="24.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_below="@id/pay_problem_msg_textview">
            <RadioGroup android:id="@id/mm_pay_problem_radiogroup" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <RadioButton android:textSize="15.0sp" android:textColor="@color/black" android:id="@id/mm_pay_problem_type_rd1" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/feedback_radio_bg" android:text="@string/mm_pay_problem_content_1" />
                <RadioButton android:textSize="15.0sp" android:textColor="@color/black" android:id="@id/mm_pay_problem_type_rd2" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/feedback_radio_bg" android:text="@string/mm_pay_problem_content_2" />
                <RadioButton android:textSize="15.0sp" android:textColor="@color/black" android:id="@id/mm_pay_problem_type_rd3" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/feedback_radio_bg" android:text="@string/mm_pay_problem_content_3" />
                <RadioButton android:textSize="15.0sp" android:textColor="@color/black" android:id="@id/mm_pay_problem_type_rd4" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/feedback_radio_bg" android:text="@string/mm_pay_problem_content_4" />
                <RadioButton android:textSize="15.0sp" android:textColor="@color/black" android:id="@id/mm_pay_problem_type_rd5" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/feedback_radio_bg" android:text="@string/mm_pay_problem_content_5" />
                <RadioButton android:textSize="15.0sp" android:textColor="@color/black" android:id="@id/mm_pay_problem_type_rd6" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/feedback_radio_bg" android:text="@string/mm_pay_problem_content_6" />
            </RadioGroup>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_below="@id/mm_pay_problem_content">
        <EditText android:textSize="12.0sp" android:textColor="@color/black" android:id="@id/mm_pay_problem_email" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="36.0dip" android:hint="@string/mm_feedback_email" android:maxLength="60" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <RelativeLayout android:orientation="horizontal" android:id="@id/pay_problem_menu_layer" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginBottom="10.0dip" android:layout_alignParentBottom="true">
        <Button android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/pay_problem_button" android:background="@color/mm_sliding_exit_yes_button" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/mm_pay_problem_submit" android:textAllCaps="false" />
        <RelativeLayout android:id="@id/pay_problem_bar" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip">
            <ProgressBar android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginRight="20.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>